--- a/files/정기상품__결제대기_상태안내_/styles.css
+++ b/files/정기상품__결제대기_상태안내_/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1001px;
+  width:1315px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,122 +12,83 @@
   position:absolute;
   z-index:0;
 }
-#u119_div {
+#u231_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:1001px;
-  height:44px;
-  background:inherit;
-  background-color:rgba(107, 107, 107, 1);
-  box-sizing:border-box;
-  border-width:1px;
-  border-style:solid;
-  border-color:rgba(121, 121, 121, 1);
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:16px;
-  color:#FFFFFF;
-  text-align:left;
+  width:1315px;
+  height:1270px;
 }
-#u119 {
+#u231 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:-7px;
+  width:1315px;
+  height:1270px;
+}
+#u231_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:1001px;
-  height:44px;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:16px;
-  color:#FFFFFF;
-  text-align:left;
-}
-#u119_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:12px;
-  width:997px;
+  width:0px;
+  visibility:hidden;
   word-wrap:break-word;
 }
-#u120_div {
+#u232_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:325px;
-  height:19px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:16px;
-  color:#FF0000;
-  text-align:center;
+  width:733px;
+  height:431px;
 }
-#u120 {
+#u232 {
   border-width:0px;
   position:absolute;
-  left:7px;
-  top:55px;
-  width:325px;
-  height:19px;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:16px;
-  color:#FF0000;
-  text-align:center;
+  left:403px;
+  top:748px;
+  width:733px;
+  height:431px;
 }
-#u120_text {
+#u232_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:325px;
-  white-space:nowrap;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
-#u121_div {
+#u233_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:349px;
-  height:622px;
+  width:649px;
+  height:76px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
   border-width:1px;
   border-style:solid;
-  border-color:rgba(89, 89, 89, 1);
+  border-color:rgba(255, 255, 255, 1);
   border-radius:0px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u121 {
+#u233 {
   border-width:0px;
   position:absolute;
-  left:16px;
-  top:96px;
-  width:349px;
-  height:622px;
+  left:438px;
+  top:1179px;
+  width:649px;
+  height:76px;
 }
-#u121_text {
+#u233_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -136,67 +97,48 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u122_div {
+#u234_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:349px;
-  height:27px;
-  background:inherit;
-  background-color:rgba(89, 89, 89, 1);
-  box-sizing:border-box;
-  border-width:1px;
-  border-style:solid;
-  border-color:rgba(121, 121, 121, 1);
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:11px;
-  color:#FFFFFF;
+  width:175px;
+  height:65px;
 }
-#u122 {
+#u234 {
   border-width:0px;
   position:absolute;
-  left:16px;
-  top:96px;
-  width:349px;
-  height:27px;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:11px;
-  color:#FFFFFF;
+  left:638px;
+  top:585px;
+  width:175px;
+  height:65px;
+  text-align:left;
 }
-#u122_text {
+#u234_text {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:7px;
-  width:345px;
+  top:2px;
+  width:171px;
   word-wrap:break-word;
 }
-#u123_img {
+#u235_img {
   border-width:0px;
   position:absolute;
-  left:-1px;
-  top:-1px;
-  width:351px;
-  height:5px;
+  left:0px;
+  top:0px;
+  width:61px;
+  height:32px;
 }
-#u123 {
+#u235 {
   border-width:0px;
   position:absolute;
-  left:17px;
-  top:180px;
-  width:348px;
-  height:2px;
+  left:465px;
+  top:594px;
+  width:61px;
+  height:32px;
 }
-#u123_text {
+#u235_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -205,38 +147,13 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u124_img {
+#u236_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:349px;
-  height:2px;
-}
-#u124 {
-  border-width:0px;
-  position:absolute;
-  left:17px;
-  top:366px;
-  width:348px;
-  height:1px;
-}
-#u124_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u125_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:326px;
-  height:52px;
+  width:122px;
+  height:18px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -244,170 +161,68 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:11px;
-  color:#999999;
-}
-#u125 {
-  border-width:0px;
-  position:absolute;
-  left:28px;
-  top:387px;
-  width:326px;
-  height:52px;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:11px;
-  color:#999999;
-}
-#u125_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:326px;
-  word-wrap:break-word;
-}
-#u126_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:348px;
-  height:59px;
-}
-#u126 {
-  border-width:0px;
-  position:absolute;
-  left:17px;
-  top:123px;
-  width:348px;
-  height:59px;
-  font-family:'나눔고딕';
-  font-weight:400;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
   font-style:normal;
   font-size:12px;
-  color:#000000;
-  text-align:left;
+  line-height:18px;
 }
-#u126_text {
+#u236 {
   border-width:0px;
   position:absolute;
-  left:20px;
-  top:22px;
-  width:326px;
-  word-wrap:break-word;
-}
-#u127_img {
-  border-width:0px;
-  position:absolute;
-  left:-1px;
-  top:-1px;
-  width:351px;
-  height:5px;
-}
-#u127 {
-  border-width:0px;
-  position:absolute;
-  left:17px;
-  top:524px;
-  width:348px;
-  height:2px;
-}
-#u127_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u128_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:348px;
-  height:59px;
-}
-#u128 {
-  border-width:0px;
-  position:absolute;
-  left:17px;
-  top:467px;
-  width:348px;
-  height:59px;
-  font-family:'나눔고딕';
-  font-weight:400;
+  left:467px;
+  top:597px;
+  width:122px;
+  height:18px;
+  font-family:'돋움 Bold', '돋움 Regular', '돋움';
+  font-weight:700;
   font-style:normal;
   font-size:12px;
-  color:#000000;
-  text-align:left;
+  line-height:18px;
 }
-#u128_text {
-  border-width:0px;
-  position:absolute;
-  left:20px;
-  top:22px;
-  width:326px;
-  word-wrap:break-word;
-}
-#u129_div {
+#u236_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:169px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'나눔고딕 Bold', '나눔고딕';
-  font-weight:600;
-  font-style:normal;
-  font-size:14px;
-}
-#u129 {
-  border-width:0px;
-  position:absolute;
-  left:32px;
-  top:541px;
-  width:169px;
-  height:16px;
-  font-family:'나눔고딕 Bold', '나눔고딕';
-  font-weight:600;
-  font-style:normal;
-  font-size:14px;
-}
-#u129_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:169px;
+  width:122px;
   white-space:nowrap;
 }
-#u130_div {
+#u237_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:174px;
-  height:43px;
+  width:300px;
+  height:72px;
+}
+#u237 {
+  border-width:0px;
+  position:absolute;
+  left:836px;
+  top:570px;
+  width:300px;
+  height:72px;
+}
+#u237_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u238_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:28px;
   background:inherit;
-  background-color:rgba(255, 0, 153, 1);
-  box-sizing:border-box;
-  border-width:1px;
-  border-style:solid;
-  border-color:rgba(255, 255, 255, 1);
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
   border-radius:0px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
@@ -415,102 +230,37 @@
   font-family:'나눔고딕';
   font-weight:400;
   font-style:normal;
-  color:#FFFFFF;
+  font-size:12px;
+  color:#FF0000;
 }
-#u130 {
+#u238 {
   border-width:0px;
   position:absolute;
-  left:17px;
-  top:674px;
-  width:174px;
-  height:43px;
+  left:850px;
+  top:585px;
+  width:300px;
+  height:28px;
   font-family:'나눔고딕';
   font-weight:400;
   font-style:normal;
-  color:#FFFFFF;
+  font-size:12px;
+  color:#FF0000;
 }
-#u130_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:170px;
-  word-wrap:break-word;
-}
-#u131_div {
+#u238_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:173px;
-  height:43px;
-  background:inherit;
-  background-color:rgba(255, 0, 153, 1);
-  box-sizing:border-box;
-  border-width:1px;
-  border-style:solid;
-  border-color:rgba(255, 255, 255, 1);
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  color:#FFFFFF;
-}
-#u131 {
-  border-width:0px;
-  position:absolute;
-  left:191px;
-  top:674px;
-  width:173px;
-  height:43px;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  color:#FFFFFF;
-}
-#u131_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:169px;
+  width:300px;
   word-wrap:break-word;
 }
-#u132_img {
+#u239_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:27px;
-  height:27px;
-}
-#u132 {
-  border-width:0px;
-  position:absolute;
-  left:331px;
-  top:682px;
-  width:27px;
-  height:27px;
-  color:#FFFFFF;
-}
-#u132_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:6px;
-  width:23px;
-  word-wrap:break-word;
-}
-#u133_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:342px;
-  height:181px;
+  width:735px;
+  height:137px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   box-sizing:border-box;
@@ -521,20 +271,16 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  color:#666666;
-  text-align:left;
 }
-#u133 {
+#u239 {
   border-width:0px;
   position:absolute;
-  left:20px;
-  top:186px;
-  width:342px;
-  height:181px;
-  color:#666666;
-  text-align:left;
+  left:415px;
+  top:520px;
+  width:735px;
+  height:137px;
 }
-#u133_text {
+#u239_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -543,133 +289,97 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u133_ann {
-  border-width:0px;
-  position:absolute;
-  left:355px;
-  top:182px;
-  width:1px;
-  height:1px;
-}
-#u134_div {
+#u240_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:91px;
-  height:16px;
+  width:710px;
+  height:60px;
+}
+#u240 {
+  border-width:0px;
+  position:absolute;
+  left:415px;
+  top:389px;
+  width:710px;
+  height:60px;
+}
+#u240_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u241_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:41px;
+  height:20px;
   background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'나눔고딕 Bold', '나눔고딕';
-  font-weight:600;
-  font-style:normal;
-  font-size:14px;
-}
-#u134 {
-  border-width:0px;
-  position:absolute;
-  left:32px;
-  top:198px;
-  width:91px;
-  height:16px;
-  font-family:'나눔고딕 Bold', '나눔고딕';
-  font-weight:600;
-  font-style:normal;
-  font-size:14px;
-}
-#u134_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:91px;
-  white-space:nowrap;
-}
-#u135_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:298px;
-  height:28px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:12px;
-  color:#FF0000;
-}
-#u135 {
-  border-width:0px;
-  position:absolute;
-  left:32px;
-  top:230px;
-  width:298px;
-  height:28px;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
-  font-size:12px;
-  color:#FF0000;
-}
-#u135_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:298px;
-  white-space:nowrap;
-}
-#u136_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:148px;
-  height:43px;
-  background:inherit;
-  background-color:rgba(0, 0, 0, 1);
+  background-color:rgba(255, 0, 0, 1);
   box-sizing:border-box;
   border-width:1px;
   border-style:solid;
-  border-color:rgba(121, 121, 121, 1);
+  border-color:rgba(255, 255, 255, 1);
   border-radius:0px;
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
   color:#FFFFFF;
 }
-#u136 {
+#u241 {
   border-width:0px;
   position:absolute;
-  left:117px;
-  top:290px;
-  width:148px;
-  height:43px;
-  font-family:'나눔고딕';
-  font-weight:400;
-  font-style:normal;
+  left:1125px;
+  top:508px;
+  width:41px;
+  height:20px;
   color:#FFFFFF;
 }
-#u136_text {
+#u241_text {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:14px;
-  width:144px;
+  top:2px;
+  width:37px;
+  white-space:nowrap;
+}
+#u241_ann {
+  border-width:0px;
+  position:absolute;
+  left:1159px;
+  top:504px;
+  width:1px;
+  height:1px;
+}
+#u242_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:205px;
+  height:42px;
+}
+#u242 {
+  border-width:0px;
+  position:absolute;
+  left:653px;
+  top:402px;
+  width:205px;
+  height:42px;
+}
+#u242_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
   word-wrap:break-word;
 }
